--- a/qltv/static/css/style.css
+++ b/qltv/static/css/style.css
@@ -3,6 +3,7 @@ h1, h2, h3 {margin: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 
+
 html, body{
 	font-family: 'PT Sans', sans-serif;
     font-size: 100%;
@@ -19,9 +20,6 @@ body a{
 }
 h1,h2,h3,h4,h5,h6{
 	margin:0;			   
-}
-p{
-	margin:0;
 }
 ul,label{
 	margin:0;
@@ -132,8 +130,7 @@ button#showLeftPush:hover {
 	left: 0;
 }
 /* Transitions */
-.cbp-spmenu,
-.cbp-spmenu-push {
+.cbp-spmenu,.cbp-spmenu-push {
 	-webkit-transition: all 0.3s ease;
 	-moz-transition: all 0.3s ease;
 	transition: all 0.3s ease;
@@ -560,7 +557,34 @@ i.dollar2{
 		margin: 1em 0 0 0;
 }
 /*-- menungang --*/
-/*--radio--*/
+/*-- quyen --*/
+.card-header_top{
+    margin: 0px 50px;
+}
+.card-header_bt{
+    margin: 20px;
+}
+/*-- thongtinnhanvien --*/
+.container{
+}
+.header-emp{
+    margin: width: 100%;
+    padding: 1em;
+}
+.header-emp-left{
+    float: left;
+    width: 50%;
+    height: 100%;
+    padding: 1em 1em 1em 1em;
+}
+.header-emp-right{
+    right: 0px;
+    float: right;
+    width: 50%;
+    height: 100%;
+    padding: 1em 1em 1em 1em;
+}
+
 
 
 
