--- a/qltv/static/css/stylelogin.css
+++ b/qltv/static/css/stylelogin.css
@@ -104,7 +104,7 @@ h1.w3ls {
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Times New Roman', cursive;
 }
 a.hiddenanchor{
 	display: none;
@@ -134,7 +134,7 @@ a.hiddenanchor{
 	text-transform: capitalize;
 	text-align: center;
 	padding-bottom: 30px;
-	font-family: 'Comfortaa', cursive;
+	font-family: 'Times New Roman', cursive;
 }
 #wrapper h2:after{
 	content: ' ';
@@ -189,7 +189,7 @@ label.uname span,label.youpasswd span,label.youmail span {
     outline: none;
     padding: 10px 5px 10px 35px;
     border: 1px solid rgba(178, 178, 178, 0);
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Times New Roman', cursive;
     -webkit-appearance: textfield;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
