--- a/qltv/templates/employee.html
+++ b/qltv/templates/employee.html
@@ -8,69 +8,74 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center">THÔNG TIN NHÂN VIÊN</h1>
-    {% if err_msg %}
-        <h1 class="text-danger">{{ err_msg }}</h1>
-    {% endif %}
+    <h1 class="text-uppercase text-center">THÔNG TIN NHÂN VIÊN</h1>
     <form method="post">
-        <div class="form-group">
-            <label>Họ và tên</label>
-            <input type="text" name="name" class="form-control"  />
-        </div>
-        <div class="form-group">
-            <label>Ngày sinh</label>
-            <input type="date" name="birthday" class="form-control"  />
-        </div>
-        <div class="form-group">
-            <label>Bằng cấp</label>
-            <select class="form-control" name="bangcap">
-                <option>Tú Tài</option>
-                <option>Trung Cấp</option>
-                <option>Cao Đẳng</option>
-                <option>Đại học</option>
-                <option>Thạc Sĩ</option>
-                <option>Tiến Sĩ</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Chức vụ</label><br>
-            <div class="radiogroup">
-                <input type="radio" name="gender" value="giamdoc" checked class="radio"> Giám Đốc
-                <input type="radio" name="gender" value="phogd" class="radio"> Phó Giám Đốc
-                <input type="radio" name="gender" value="truongphong" class="radio"> Trưởng Phòng
-                <input type="radio" name="gender" value="phophong" class="radio"> Phó Phòng
-                <input type="radio" name="gender" value="nv" class="radio"> Nhân viên<br>
+        <div class="header-emp">
+            <div class="header-emp-left">
+                <div class="form-group">
+                <label>Họ và tên</label>
+                <input type="text" name="name" class="form-control"  />
+            </div>
+            <div class="form-group">
+                <label>Ngày sinh</label>
+                <input type="date" name="birthday" class="form-control"  />
+            </div>
+            <div class="form-group">
+                <label>Bằng cấp</label>
+                <select class="form-control" name="bangcap">
+                    <option>Tú Tài</option>
+                    <option>Trung Cấp</option>
+                    <option>Cao Đẳng</option>
+                    <option>Đại học</option>
+                    <option>Thạc Sĩ</option>
+                    <option>Tiến Sĩ</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Chức vụ</label>
+                 <select class="form-control" name="bangcap">
+                    <option>Giám Đốc</option>
+                    <option>Phó Giám Đốc</option>
+                    <option>Trưởng Phòng</option>
+                    <option>Phó Phòng</option>
+                    <option>Nhân Viên</option>
+                </select>
+            </div>
+                <div>
+                    <a href= "{{ url_for('employee_list') }}" class="btn btn-sm btn-primary btn-round py-1 font-weight-bold">Thêm mới</a>
+                    <a href="#" class="btn btn-sm btn-info btn-round py-1 font-weight-bold">Cập nhật</a>
+                </div>
+            </div>
+            <div class="header-emp-right">
+                <div class="form-group">
+                <label>Địa chỉ</label>
+                <input name="address" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label>Điện thoại</label>
+                <input type="text" name="phones" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                       maxlength="10" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label>Bộ phận</label>
+                <select class="form-control" name="bophan">
+                    <option>Thủ Thư</option>
+                    <option>Thủ Kho</option>
+                    <option>Thủ Quỹ</option>
+                    <option>Ban Giám Đốc</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" name="email" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" name="password"  class="form-control" />
+            </div>
             </div>
         </div>
-        <div class="form-group">
-            <label>Địa chỉ</label>
-            <input name="address" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label>Điện thoại</label>
-            <input type="text" name="phones" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
-                   maxlength="10" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label>Bộ phận</label>
-            <select class="form-control" name="bophan">
-                <option>Thủ Thư</option>
-                <option>Thủ Kho</option>
-                <option>Thủ Quỹ</option>
-                <option>Ban Giám Đốc</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="email" name="email" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" name="password"  class="form-control" />
-        </div>
-        <div>
-            <input type="submit" value="{% if product %}Cập nhật{%else%}{%endif%} Cập nhật thông tin" class="btn btn-danger" />
-        </div>
+
     </form>
 </div>
 </body>
