--- a/qltv/templates/login.html
+++ b/qltv/templates/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Majestic Login Form Flat Responsive widget Template :: w3layouts</title>
+<title>Đăng nhập</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Majestic Login Form Widget Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
@@ -15,51 +15,50 @@
 <body>
 <h1 class="w3ls">QUẢN LÝ THƯ VIỆN</h1>
 <div id="container_demo" >
-
     <a class="hiddenanchor" id="toregister"></a>
     <a class="hiddenanchor" id="tologin"></a>
     <div id="wrapper">
         <div id="login" class="animate form">
 			<form  action="#" method="post" autocomplete="on">
-                <h2>Log in</h2>
+                <h2>ĐĂNG NHẬP</h2>
                 <p>
-					<label for="username" class="uname" data-icon="u" ><span>Your email</span></label>
-                    <input id="username" name="username" required="required" type="text" placeholder="EMAIL"/>
+					<label for="username" class="uname" data-icon="u" ><span>Nhập email của bạn</span></label>
+                    <input id="username" name="username" required="required" type="text" placeholder="@gmail.com"/>
                 </p>
                 <p>
-                    <label for="password" class="youpasswd" data-icon="p"><span>Your password</span></label>
-                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
+                    <label for="password" class="youpasswd" data-icon="p"><span>Mật khẩu</span></label>
+                    <input id="password" name="password" required="required" type="password" placeholder="***" />
                 </p>
                 <p class="login button">
-                    <input type="submit" value="Login" />
+                    <input type="submit" value="Xác nhận" />
 				</p>
                 <p class="change_link">
-					<span>Change your password?</span>
-					<a href="#toregister" class="to_register">Settings</a>
+					<span>Thay đổi mật khẩu ?</span>
+					<a href="#toregister" class="to_register">Cài đặt</a>
 				</p>
             </form>
         </div>
 		<div id="register" class="animate form">
             <form  action="#" method="post" autocomplete="on">
-                <h2> Edit </h2>
+                <h2> Cập nhật tài khoản </h2>
                 <p>
-                    <label for="emailsignup" class="youmail" data-icon="e" ><span>Your email</span></label>
-                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="EXAMPLE@MAIL.COM"/>
+                    <label for="emailsignup" class="youmail" data-icon="e" ><span>Nhập email của bạn</span></label>
+                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="@gmail.com"/>
                 </p>
                 <p>
-                    <label for="passwordsignup" class="youpasswd" data-icon="p"><span>Your password</span></label>
-                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    <label for="passwordsignup" class="youpasswd" data-icon="p"><span>Nhập mật khẩu</span></label>
+                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="***"/>
 				</p>
 				<p>
-                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p"><span>Please confirm your password</span></label>
-                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p"><span>Nhập lại mật khẩu</span></label>
+                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="***"/>
                 </p>
                 <p class="signin button">
-					<input type="submit" value="Update"/>
+					<input type="submit" value="Cập nhật"/>
 				</p>
                 <p class="change_link">
-					<span>Re-login ?</span>
-					<a href="#tologin" class="to_register">Log In</a>
+					<span>Đăng nhập lại ?</span>
+					<a href="#tologin" class="to_register">Đăng nhập</a>
 				</p>
             </form>
         </div>
