--- a/qltv/templates/index.html
+++ b/qltv/templates/index.html
@@ -181,6 +181,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<!-- //header-ends -->
 		<!-- main content start-->
+<!--		{% block content %}-->
 		<div id="page-wrapper">
 			<div class="main-page">
 			<div class="col_3">
@@ -254,6 +255,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					<!--//---->
 			</div>
 		</div>
+<!--		{% endblock %}-->
 	<!--footer-->
 	<div class="footer">
 	   <p>&copy; Kim Hang | Design by <a href="https://ou.edu.vn/" target="_blank">OU</a></p>
