--- a/qltv/templates/login.html
+++ b/qltv/templates/login.html
@@ -1,68 +1,89 @@
-<!doctype html>
-<html>
-<head>
-<title>Đăng nhập</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Majestic Login Form Widget Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!--<!doctype html>-->
+<!--<html>-->
+<!--<head>-->
+<!--<title>Đăng nhập</title>-->
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+<!--<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />-->
+<!--<meta name="keywords" content="Majestic Login Form Widget Responsive, Login form web template,Flat Pricing tables,Flat Drop downs  Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />-->
+<!--<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>-->
 
-<!-- css files -->
-<link href="{{ url_for('static', filename='css/stylelogin.css') }}" rel="stylesheet" />
-<link href="{{ url_for('static', filename='css/animate-custom.css') }}" rel="stylesheet" />
-<!-- /css files -->
-</head>
-<body>
-<h1 class="w3ls">QUẢN LÝ THƯ VIỆN</h1>
-<div id="container_demo" >
-    <a class="hiddenanchor" id="toregister"></a>
-    <a class="hiddenanchor" id="tologin"></a>
-    <div id="wrapper">
-        <div id="login" class="animate form">
-			<form  action="#" method="post" autocomplete="on">
-                <h2>ĐĂNG NHẬP</h2>
-                <p>
-					<label for="username" class="uname" data-icon="u" ><span>Nhập email của bạn</span></label>
-                    <input id="username" name="username" required="required" type="text" placeholder="@gmail.com"/>
-                </p>
-                <p>
-                    <label for="password" class="youpasswd" data-icon="p"><span>Mật khẩu</span></label>
-                    <input id="password" name="password" required="required" type="password" placeholder="***" />
-                </p>
-                <p class="login button">
-                    <input type="submit" value="Xác nhận" />
-				</p>
-                <p class="change_link">
-					<span>Thay đổi mật khẩu ?</span>
-					<a href="#toregister" class="to_register">Cài đặt</a>
-				</p>
-            </form>
-        </div>
-		<div id="register" class="animate form">
-            <form  action="#" method="post" autocomplete="on">
-                <h2> Cập nhật tài khoản </h2>
-                <p>
-                    <label for="emailsignup" class="youmail" data-icon="e" ><span>Nhập email của bạn</span></label>
-                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="@gmail.com"/>
-                </p>
-                <p>
-                    <label for="passwordsignup" class="youpasswd" data-icon="p"><span>Nhập mật khẩu</span></label>
-                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="***"/>
-				</p>
-				<p>
-                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p"><span>Nhập lại mật khẩu</span></label>
-                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="***"/>
-                </p>
-                <p class="signin button">
-					<input type="submit" value="Cập nhật"/>
-				</p>
-                <p class="change_link">
-					<span>Đăng nhập lại ?</span>
-					<a href="#tologin" class="to_register">Đăng nhập</a>
-				</p>
-            </form>
-        </div>
-	</div>
-</div>
-</body>
-</html>
+<!--&lt;!&ndash; css files &ndash;&gt;-->
+<!--<link href="{{ url_for('static', filename='css/stylelogin.css') }}" rel="stylesheet" />-->
+<!--<link href="{{ url_for('static', filename='css/animate-custom.css') }}" rel="stylesheet" />-->
+<!--&lt;!&ndash; /css files &ndash;&gt;-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1 class="w3ls">QUẢN LÝ THƯ VIỆN</h1>-->
+<!--<div id="container_demo" >-->
+<!--    <a class="hiddenanchor" id="toregister"></a>-->
+<!--    <a class="hiddenanchor" id="tologin"></a>-->
+<!--    <div id="wrapper">-->
+<!--        <div id="login" class="animate form">-->
+<!--			<form  action="#" method="post" autocomplete="on">-->
+<!--                <h2>ĐĂNG NHẬP</h2>-->
+<!--                <p>-->
+<!--					<label for="username" class="uname" data-icon="u" ><span>Nhập email của bạn</span></label>-->
+<!--                    <input id="username" name="username" required="required" type="text" placeholder="@gmail.com"/>-->
+<!--                </p>-->
+<!--                <p>-->
+<!--                    <label for="password" class="youpasswd" data-icon="p"><span>Mật khẩu</span></label>-->
+<!--                    <input id="password" name="password" required="required" type="password" placeholder="***" />-->
+<!--                </p>-->
+<!--                <p class="login button">-->
+<!--                    <input type="submit" value="Xác nhận" />-->
+<!--				</p>-->
+<!--                <p class="change_link">-->
+<!--					<span>Thay đổi mật khẩu ?</span>-->
+<!--					<a href="#toregister" class="to_register">Cài đặt</a>-->
+<!--				</p>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--		<div id="register" class="animate form">-->
+<!--            <form  action="#" method="post" autocomplete="on">-->
+<!--                <h2> Cập nhật tài khoản </h2>-->
+<!--                <p>-->
+<!--                    <label for="emailsignup" class="youmail" data-icon="e" ><span>Nhập email của bạn</span></label>-->
+<!--                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="@gmail.com"/>-->
+<!--                </p>-->
+<!--                <p>-->
+<!--                    <label for="passwordsignup" class="youpasswd" data-icon="p"><span>Nhập mật khẩu</span></label>-->
+<!--                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="***"/>-->
+<!--				</p>-->
+<!--				<p>-->
+<!--                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p"><span>Nhập lại mật khẩu</span></label>-->
+<!--                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="***"/>-->
+<!--                </p>-->
+<!--                <p class="signin button">-->
+<!--					<input type="submit" value="Cập nhật"/>-->
+<!--				</p>-->
+<!--                <p class="change_link">-->
+<!--					<span>Đăng nhập lại ?</span>-->
+<!--					<a href="#tologin" class="to_register">Đăng nhập</a>-->
+<!--				</p>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--	</div>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
+
+<!--{% extends 'admin/index.html' %}-->
+<!--{% block body %}-->
+<!--    <div class="container">-->
+<!--        <h1 class="text-center text-success">LOGIN</h1>-->
+<!--        <form method="post">-->
+<!--            <div class="form-group">-->
+<!--                <input type="text" placeholder="Username..."-->
+<!--                       name="username" class="form-control" />-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input type="password" placeholder="Password..."-->
+<!--                       name="password" class="form-control" />-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input type="submit" value="Login"-->
+<!--                       class="btn btn-danger" />-->
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--{% endblock %}-->
